tests/specs/run/unsafe_proto_suggestion/set_and_throw_unsafe.out
error: Uncaught (in promise) Error: boom
throw new Error("boom");
      ^
    at [WILDCARD]set_and_throw.js:7:7
